force-app/main/default/objects/MCConnectionSetting__mdt/MCConnectionSetting__mdt.object-meta.xml
<CustomObject>
    <label>MCConnectionSetting</label>
    <pluralLabel>MCConnectionSettings</pluralLabel>
</CustomObject>