force-app/main/default/objects/MCConnectionSetting__mdt/fields/account_id__c.field-meta.xml
<CustomField>
    <fullName>account_id__c</fullName>
    <label>account_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>