force-app/main/default/objects/MCConnectionSetting__mdt/fields/subdomain__c.field-meta.xml
<CustomField>
    <fullName>subdomain__c</fullName>
    <label>subdomain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>